@@ -760,7 +760,7 @@ if (0 == $num_rows || $is_affected) {
         $goto = PMA_securePath($goto);
         // Checks for a valid target script
         $is_db = $is_table = false;
-        if (isset($_REQUEST['purge'])) {
+        if (isset($_REQUEST['purge']) && $_REQUEST['purge'] == '1') {
             $table = '';
             unset($url_params['table']);
         }
